--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,13 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
     <color name="colorCardView">#DEB887</color>
+
+    <color name="color_white">#F5F5F5</color>
+    <color name="color_yellow">#FFF59D</color>
+    <color name="color_green">#81C784</color>
+    <color name="color_blue">#80d8ff</color>
+    <color name="color_red">#ff8a80</color>
+    <color name="color_violet">#e1bee7</color>
+    <color name="color_pink">#f8bbd0</color>
+
 </resources>
